# extrawest_ocpi

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Pipfile  README.md  pyproject.toml
.github/workflows/: building_ci_cd.yaml  testing_ci_cd.yml
docs/: requirements.txt  requirementx.txt
docs/source/: conf.py  index.rst  installation.rst
docs/source/api/: index.rst  v_2_1_1.rst  v_2_2_1.rst
docs/source/tutorial/: crud.rst  crud_example.rst  db_interface_example.rst  index.rst  push.rst  quickstart.rst
examples/: crud.py  db_interface.py
py_ocpi/: __init__.py  main.py
py_ocpi/core/: adapter.py  config.py  crud.py  data_types.py  dependencies.py  endpoints.py  enums.py  exceptions.py  logs.py  push.py  schemas.py  status.py  utils.py
py_ocpi/core/authentication/: authenticator.py  verifier.py
py_ocpi/core/endpoints/: __init__.py  utils.py
py_ocpi/core/routers/: __init__.py
py_ocpi/modules/chargingprofiles/: enums.py  schemas.py
py_ocpi/modules/locations/: enums.py  schemas.py
py_ocpi/modules/tariffs/: enums.py
py_ocpi/modules/versions/: __init__.py  enums.py  main.py  schemas.py
py_ocpi/routers/: __init__.py
py_ocpi/routers/v_2_1_1/: cpo.py  emsp.py
py_ocpi/routers/v_2_2_1/: cpo.py  emsp.py
tests/: test_dependency_injection.py  test_main.py  test_pagination.py  test_push.py
tests/test_modules/: test_cdrs.py  test_commands.py  test_credentials.py  test_locations.py  test_sessions.py  test_tariffs.py  test_tokens.py  test_versions.py  utils.py
tests/test_modules/mocks/: async_client.py
tests/test_modules/test_v_2_1_1/: test_cdrs.py  (+7 more)
(+151 files in other folders)
